# rag-module

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: basic_usage.py
rag_module/: __init__.py  chunking.py  config.py  embeddings.py  exceptions.py  models.py  retrieval.py  service.py  utils.py  vector_store.py
tests/: conftest.py  test_chunking_text_api.py  test_ingest_text.py  test_local_stack.py  test_offline_e2e.py  test_required_filters.py  test_rrf.py  test_token_counting.py
