[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-module"
version = "1.1.0"
description = "Modulares, hochpräzises RAG-Modul (local-first): layout-bewusstes Chunking, temporale Versionierung, Hybrid Search (Qdrant), RRF und lokales Cross-Encoder-Reranking – mit Andockstellen für Cohere/Anthropic."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Ahmed Trabelsi", email = "ahmed.trabelsi.tn@outlook.com" }]
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "qdrant-client>=1.12",
    "fastembed>=0.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Andockstellen für externe APIs (optional – der Default-Stack läuft ohne):
cohere = ["cohere>=5.13"]
anthropic = ["anthropic>=0.40"]
# PDF-Verarbeitung (Text- + Tabellen-Extraktion):
pdf = ["pdfplumber>=0.11"]
# Beste lokale Qualität: BGE-M3-Embeddings + bge-reranker-v2-m3 (inkl. Torch):
bge = ["FlagEmbedding>=1.2.10"]
all = [
    "cohere>=5.13",
    "anthropic>=0.40",
    "pdfplumber>=0.11",
]

[tool.setuptools]
packages = ["rag_module"]

[tool.setuptools.package-data]
rag_module = ["py.typed"]
