[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-module"
version = "1.1.0"
description = "Modulares, hochpräzises RAG-Modul (local-first): layout-bewusstes Chunking, temporale Versionierung, Hybrid Search (Qdrant), RRF und lokales Cross-Encoder-Reranking – mit Andockstellen für Cohere/Anthropic."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Ahmed Trabelsi", email = "ahmed.trabelsi.tn@outlook.com" }]
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "qdrant-client>=1.12",
    "fastembed>=0.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Andockstellen für externe APIs (optional – der Default-Stack läuft ohne):
cohere = ["cohere>=5.13"]
anthropic = ["anthropic>=0.40"]
# PDF-Verarbeitung (Text- + Tabellen-Extraktion):
pdf = ["pdfplumber>=0.11"]
# Beste lokale Qualität: BGE-M3-Embeddings + bge-reranker-v2-m3 (inkl. Torch):
bge = ["FlagEmbedding>=1.2.10"]
all = [
    "cohere>=5.13",
    "anthropic>=0.40",
    "pdfplumber>=0.11",
]
# Entwicklung: Tests + Lint
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.setuptools]
packages = ["rag_module"]

[tool.setuptools.package-data]
rag_module = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Die beiden Standalone-Skripte (test_offline_e2e.py, test_local_stack.py)
# haben eigene main()-Runner und teils Modell-Downloads; pytest sammelt nur
# die reine pytest-Suite ein.
addopts = "--ignore=tests/test_offline_e2e.py --ignore=tests/test_local_stack.py"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",   # docstrings/Kommentare dürfen überlang sein; Code hält sich an 100
    "UP042",  # (str, Enum) -> StrEnum ändert str()-Semantik; bewusst beim Bestand bleiben
]
